# MovementGraph

./: .gitignore  CMakeLists.txt  CMakeListsLib.txt  CMakeListsTest.txt  Makefile  README.md  automaticInitGeneration.h  config.h  edge.cpp  edge.h  generator.py  graph.cpp  graph.h  graphcreator.cpp  graphcreator.h  kernelgraph.cpp  kernelgraph.h  log.h  main.cpp  movementgraph.cpp  movementgraph.h  moveparams.cpp  moveparams.h  primalgraph.cpp  primalgraph.h  qiproject.xml  vertex.cpp  vertex.h
sources/: defaultOrder.json  defaultPosition.json
test/: edge.txt  edgebuf.txt  vertex.txt
translate/: .translate.sh.swp  README.md  translate.py  translate.sh
translate/positions/: getupFront.pos  getupFrontSlow.pos  slowStand.pos
translate/positions/oldPositions/: kick.pos
